2009-08-06  Michelangelo De Simone  <micdesim@gmail.com>

Reviewed by Darin Adler.

        https://bugs.webkit.org/show_bug.cgi?id=27455
        Test suite for form controls' custom validation message.

        * fast/dom/domListEnumeration-expected.txt: Corrected
        * fast/dom/resources/domListEnumeration.js: Corrected
        * fast/forms/ValidityState-customError-001-expected.txt: Added.
        * fast/forms/ValidityState-customError-001.html: Added.
        * fast/forms/ValidityState-customError-002-expected.txt: Added.
        * fast/forms/ValidityState-customError-002.html: Added.
        * fast/forms/ValidityState-customError-003-expected.txt: Added.
        * fast/forms/ValidityState-customError-003.html: Added.
        * fast/forms/ValidityState-customError-004-expected.txt: Added.
        * fast/forms/ValidityState-customError-004.html: Added.

2009-08-06  Michelangelo De Simone  <micdesim@gmail.com>

        Reviewed by Darin Adler.

        https://bugs.webkit.org/show_bug.cgi?id=27455
        Support for a custom validation message in ValidityState and related
        form controls.
        http://www.whatwg.org/specs/web-apps/current-work/multipage/forms.html#dom-cva-setcustomvalidity

        Tests: fast/forms/ValidityState-customError-001.html
               fast/forms/ValidityState-customError-002.html
               fast/forms/ValidityState-customError-003.html
               fast/forms/ValidityState-customError-004.html

        * html/HTMLButtonElement.idl: setCustomValidity DOM method
        * html/HTMLFieldSetElement.idl: ditto
        * html/HTMLFormControlElement.cpp:
        (WebCore::HTMLFormControlElement::setCustomValidity): ditto
        * html/HTMLFormControlElement.h:
        (WebCore::HTMLFormControlElement::valueMissing): moved down
        * html/HTMLInputElement.idl: ditto
        * html/HTMLSelectElement.idl: ditto
        * html/HTMLTextAreaElement.idl:
        * html/ValidityState.h:
        (WebCore::ValidityState::setCustomErrorMessage): method to set custom
        validation message
        (WebCore::ValidityState::customError): validation flag

Canonical link: https://commits.webkit.org/38472@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@46869 268f45cc-cd09-0410-ab3c-d52691b4dbfc