WebCore/html/ValidityState.h
@@ -38,6 +38,8 @@ namespace WebCore {
 
         HTMLFormControlElement* control() const { return m_control; }
 
+        void setCustomErrorMessage(const String& message) { m_customErrorMessage = message; }
+
         bool valueMissing() { return control()->valueMissing(); }
         bool typeMismatch() { return false; }
         bool patternMismatch() { return control()->patternMismatch(); }
@@ -45,12 +47,13 @@ namespace WebCore {
         bool rangeUnderflow() { return false; }
         bool rangeOverflow() { return false; }
         bool stepMismatch() { return false; }
-        bool customError() { return false; }
+        bool customError() { return !m_customErrorMessage.isEmpty(); }
         bool valid();
 
     private:
         ValidityState(HTMLFormControlElement*);
         HTMLFormControlElement* m_control;
+        String m_customErrorMessage;
     };
 
 } // namespace WebCore
